[package]
name = "get-host-ip"
version = "0.1.0"
edition = "2021"
authors = ["stuart zhang<stuartpage@qq.com>"]
repository = "https://github.com/stuartZhang/get-host-ip"
keywords = ["wsl2", "get host ip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardet = "0.2.4"
clap = { version = "4.2.4", features = ["derive"] }
# iconv-sys = { git = "https://github.com/stuartZhang/rust-iconv", tag = "0.1.2" }
encoding = "0.2"
regex = "1.8.1"

[profile.release]
panic = "abort"
