[package]
authors = ["stuart_zhang <stuartpage@qq.com>"]
categories = ["Command-line interface", "Command line utilities"]
description = "从`C:\\Windows\\System32\\ipconfig.exe`的执行结果内提取出指定【网卡】的属性值"
edition = "2021"
keywords = ["wsl2", "ipconfig", "ip"]
license = "MIT"
name = "get-host-ip"
version = "0.1.0"
repository = "https://github.com/stuartZhang/get-host-ip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
iconv-sys = { version = "0.1.1", package = "iconv-compat-win-sys" }
regex = "1.8.1"

[profile.release]
panic = "abort"
